--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
   width: 100%;
   height: 100%;
   z-index: -1;
-  background-image: url(./img/winter-flowers.jpg);
+  background-image: url(/img/winter-flowers.jpg);
   filter: grayscale();
 }
 
