--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,19 @@
   --pink: #f14e95;
   --bg: #0a0a0a;
   --shadow: 0 2px 2px rgb(0 0 0 / 0.5);
+  --primary-font: "Work Sans", sans-serif;
+  --secondary-font: "Sacramento", cursive;
 }
 
 /* Reset */
+* {
+  scroll-behavior: smooth;
+}
+
 body {
   font-size: 1.2rem;
-  font-family: "Work Sans", sans-serif;
-  /* min-height: 2000px; */
+  font-family: var(--primary-font);
+  /* min-height: 4000px; */
 }
 
 /* Hero */
@@ -21,7 +27,9 @@ body {
   width: 100%;
   height: 100%;
   z-index: -1;
-  background-image: url(../img/winter-flowers.jpg);
+  background-image: url("../img/winter-flowers.jpg");
+  background-size: cover;
+  background-position: center;
   filter: grayscale();
 }
 
@@ -38,7 +46,7 @@ body {
 }
 
 .hero h1 {
-  font-family: "Sacramento", cursive;
+  font-family: var(--secondary-font);
   font-size: 6rem;
 }
 
@@ -61,11 +69,156 @@ body {
   color: white;
 }
 
+/* Navbar */
+.mynavbar {
+  background-color: rgba(255, 255, 255, 0.5) !important;
+  backdrop-filter: blur(4px);
+}
+
+.mynavbar .offcanvas {
+  height: 100vh;
+}
+
+.mynavbar .navbar-brand,
+.mynavbar .offcanvas-title {
+  font-family: var(--secondary-font);
+  font-size: 3.2rem;
+  font-weight: bold;
+}
+
+.mynavbar .nav-link {
+  text-transform: uppercase;
+}
+
+/* Home */
+.home {
+  background-image: url("../img/floral2.png");
+  /* filter: grayscale(); */
+  background-size: cover;
+  min-height: 100vh;
+  margin-top: -6rem;
+  padding-top: 15rem;
+  padding-bottom: 5rem;
+}
+
+.home h2,
+.info h2 {
+  color: var(--pink);
+  font-family: var(--secondary-font);
+  font-weight: bold;
+  font-size: 5rem;
+}
+
+.home h3 {
+  color: #444;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.home p {
+  font-size: 1.1rem;
+  color: #666;
+}
+
+.home .couple {
+  margin-top: 6.25rem;
+}
+
+.home .couple h3 {
+  font-family: var(--secondary-font);
+  font-size: 2.4rem;
+  color: var(--pink);
+}
+
+.home .couple img {
+  width: 100%;
+  filter: saturate();
+}
+
+.home .heart {
+  width: 50px;
+  height: 50px;
+  background-color: white;
+  display: flex;
+  border-radius: 50%;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) translateY(65px);
+  z-index: 10;
+}
+
+.home .heart i {
+  margin: auto;
+  color: var(--pink);
+}
+
+/* Info */
+.info {
+  background-color: var(--bg);
+  color: white;
+  padding-top: 10rem;
+  padding-bottom: 8rem;
+}
+
+.info .alamat {
+  font-size: 1.1rem;
+}
+
+.info .description {
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.info .card {
+  background-color: rgba(255, 255, 255, 0.2) !important;
+  color: white !important;
+  border: 1px solid #999;
+}
+
+.info .card-header {
+  border-bottom: 1px solid #999;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+}
+
+.info .card-body {
+  font-size: 1rem;
+}
+
+.info .card-footer {
+  border-top: 1px solid #999;
+  font-size: 0.9rem;
+  font-weight: 300;
+}
+
 /* Media Query */
+/* Extra Large */
+@media (max-width: 1200px) {
+  .home .heart {
+    transform: translateX(-50%) translateY(45px);
+  }
+}
+
 /* Laptop */
 @media (max-width: 992px) {
   html {
     font-size: 75%;
+  }
+
+  #count {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .simply-countdown > .simply-section {
+    float: none;
+  }
+
+  .home .heart {
+    display: none;
   }
 
   .simply-countdown > .simply-section .simply-amount {
@@ -79,9 +232,33 @@ body {
     font-size: 65%;
   }
 
+  #count {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .simply-countdown > .simply-section {
+    float: none;
+  }
+
   .simply-countdown > .simply-section .simply-amount {
     padding: 60px;
     margin: 5px;
+  }
+
+  .home .heart {
+    display: none;
+  }
+
+  .mynavbar .offcanvas-title {
+    text-align: center;
+  }
+
+  .mynavbar .nav-link {
+    font-size: 2rem;
+    text-align: center;
   }
 }
 
@@ -89,6 +266,21 @@ body {
 @media (max-width: 576px) {
   html {
     font-size: 60%;
+  }
+
+  .home .heart {
+    display: none;
+  }
+
+  #count {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .simply-countdown > .simply-section {
+    float: none;
   }
 
   .simply-countdown > .simply-section .simply-amount {
