Add Heart in Photo

--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ body {
 }
 
 .home .couple {
-  margin-top: 100x;
+  margin-top: 100px;
 }
 
 .home .couple h3 {
@@ -131,7 +131,7 @@ body {
 }
 
 .home .couple img {
-  width: 50%;
+  width: 100%;
   filter: saturate();
 }
 
@@ -206,6 +206,10 @@ body {
     font-size: 75%;
   }
 
+  .home .heart {
+    display: none;
+  }
+
   .simply-countdown > .simply-section .simply-amount {
     padding: 70px;
   }
@@ -215,6 +219,10 @@ body {
 @media (max-width: 768px) {
   html {
     font-size: 65%;
+  }
+
+  .home .heart {
+    display: none;
   }
 
   .simply-countdown > .simply-section .simply-amount {
