--- a/style/style.css
+++ b/style/style.css
@@ -104,7 +104,9 @@ body {
 .home h2,
 .info h2,
 .story h2,
-.gallery h2 {
+.gallery h2,
+.rspv h2,
+.gifts h2 {
   color: var(--pink);
   font-family: var(--secondary-font);
   font-weight: bold;
@@ -196,13 +198,16 @@ body {
 
 /* Story */
 .story,
-.gallery {
+.gallery,
+.rspv,
+.gifts {
   padding-top: 10rem;
   padding-bottom: 8rem;
 }
 
 .story span,
-.gallery span {
+.gallery span,
+.gifts span {
   display: block;
   text-transform: uppercase;
   color: #666;
@@ -212,7 +217,9 @@ body {
 }
 
 .story p,
-.gallery p {
+.gallery p,
+.rspv p,
+.gifts p {
   font-size: 1rem;
   font-weight: 300;
 }
@@ -323,6 +330,43 @@ body {
 
 .gallery {
   background-color: #f5f5f5;
+}
+
+/* RSPV */
+.rspv {
+  background-color: var(--bg);
+}
+
+.rspv h2 {
+  font-size: 4.5rem;
+}
+
+.rspv p {
+  color: white;
+}
+
+.rspv form label {
+  color: white;
+}
+
+.rspv button {
+  background-color: var(--pink);
+  color: white;
+  border: 1px solid var(--pink);
+}
+
+.rspv button:hover {
+  background-color: white;
+  color: var(--pink);
+  border: white;
+}
+
+/* Footer */
+footer {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  background-color: var(--pink);
+  color: white;
 }
 
 /* Media Query */
